<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>exchangis-job</artifactId>
        <groupId>com.webank.wedatasphere.exchangis</groupId>
        <version>1.1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>exchangis-job-server</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <dependencies>

        <dependency>
            <groupId>com.webank.wedatasphere.exchangis</groupId>
            <artifactId>exchangis-job-common</artifactId>
            <version>1.1.0</version>
        </dependency>

        <dependency>
            <groupId>com.webank.wedatasphere.exchangis</groupId>
            <artifactId>exchangis-datasource-service</artifactId>
            <version>1.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.webank.wedatasphere.exchangis</groupId>
            <artifactId>exchangis-job-launcher</artifactId>
            <version>1.1.0</version>
        </dependency>

        <dependency>
            <groupId>com.webank.wedatasphere.exchangis</groupId>
            <artifactId>exchangis-engine-core</artifactId>
            <version>${exchangis.version}</version>
        </dependency>
        <!-- scheduler module -->
        <dependency>
            <groupId>org.apache.linkis</groupId>
            <artifactId>linkis-scheduler</artifactId>
            <version>${linkis.version}</version>
        </dependency>
        <!--mysql connector -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.49</version>
        </dependency>
        <dependency>
            <groupId>com.webank.wedatasphere.exchangis</groupId>
            <artifactId>exchangis-project-server</artifactId>
            <version>1.1.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                </includes>
            </resource>
        </resources>
    </build>

</project>